Bug 573158 - [16] BatchCompilerTest_16 is not part of any suite yet - followup commmit for removing preview and correcting the cond
Change-Id: I2bebf1a165040275a05ea4cdf227185c91466e0a
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>
Reviewed-on: https://git.eclipse.org/r/c/jdt/eclipse.jdt.core/+/179916
Tested-by: JDT Bot <jdt-bot@eclipse.org>