@@ -39,7 +39,7 @@ public class BatchCompilerTest_16 extends AbstractBatchCompilerTest {
                 super(name);
         }
         public void testBug571454_001(){
-        		if (AbstractBatchCompilerTest.isJREVersionEqualTo(CompilerOptions.VERSION_16))
+        		if (!AbstractBatchCompilerTest.isJREVersionEqualTo(CompilerOptions.VERSION_16))
         			return;
                 String currentWorkingDirectoryPath = System.getProperty("user.dir");
                 if (currentWorkingDirectoryPath == null) {
@@ -69,7 +69,7 @@ public class BatchCompilerTest_16 extends AbstractBatchCompilerTest {
                                     "\"" + OUTPUT_DIR +  File.separator + "src/X.java\""
                                     + " \"" + OUTPUT_DIR +  File.separator + "src/R.java\""
                                         + " -sourcepath \"" + OUTPUT_DIR +  File.separator + "src\""
-                                + " --release 16 --enable-preview -g -preserveAllLocals"
+                                + " --release 16 -g -preserveAllLocals"
                                 + " -proceedOnError -referenceInfo"
                                 + " -d \"" + OUTPUT_DIR + File.separator + "bin\" ",
                                 "",
@@ -86,7 +86,7 @@ public class BatchCompilerTest_16 extends AbstractBatchCompilerTest {
                 }
         }
         public void testBug570399(){
-    		if (AbstractBatchCompilerTest.isJREVersionEqualTo(CompilerOptions.VERSION_16))
+    		if (!AbstractBatchCompilerTest.isJREVersionEqualTo(CompilerOptions.VERSION_16))
     			return;
         	this.runConformTest(
         		new String[] {
@@ -107,7 +107,7 @@ public class BatchCompilerTest_16 extends AbstractBatchCompilerTest {
                 "\"" + OUTPUT_DIR +  File.separator + "src/X.java\""
                 + " \"" + OUTPUT_DIR +  File.separator + "src/R.java\""
                     + " -sourcepath \"" + OUTPUT_DIR +  File.separator + "src\""
-            + " --release 16 --enable-preview -g -preserveAllLocals"
+            + " --release 16 -g -preserveAllLocals"
             + " -proceedOnError -referenceInfo"
             + " -d \"" + OUTPUT_DIR + File.separator + "bin\" ",
             "",
